# enea

./: .clang-format  .clang-tidy  .cz.yaml  .enea  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py  conanfile.txt  enea.cbp  enea.depend  main.cpp  version.hpp.in
.github/workflows/: build-aarch64.yml  build-armv7hf.yml  build-manual.yml  build-nightly.yml  build-pr.yml  build-tags.yml  build-workflow.yml  build-x86_64.yml  build.yml
app/: CMakeLists.txt  main.cpp
cmake/: manageDependencies.cmake  manageOptions.cmake  manageResources.cmake  parseVariables.cmake
conan/: remotes.json
conan/profiles/: linux-aarch64-gcc-11.3-debug  linux-aarch64-gcc-11.3-release  linux-x86_64-gcc-11.3-debug  linux-x86_64-gcc-11.3-release  windows-x86_64-gcc-10.5-debug
conan_profiles/: enea-debug-linux-aarch64-11.3.0  enea-debug-linux-x86_64-11.3.0  enea-host-linux-x86_64-11.3.0  enea-release-linux-aarch64-11.3.0  enea-release-linux-x86_64-11.3.0  linux-x86_64-gcc-11.3-debug  linux-x86_64-gcc-11.3-host  linux-x86_64-gcc-11.3-release
conan_profiles/include/: enea  enea-debug  enea-host  enea-linux-aarch64-11.3.0  enea-linux-x86_64-11.3.0  enea-release
conan_recipes/advmame/: conanfile.py
conan_recipes/rocket/: conanfile.py
conan_recipes/rocket/test_package/: CMakeLists.txt
conan_recipes/rocket/test_package/src/: example.cpp
conan_recipes/sfml/: conandata.yml  conanfile.py
conan_recipes/sfml/patches/: 2.6.0-0008-disable-implicit-include-dir
conan_recipes/toolchain-linux-x86_64/: conanfile.py
conan_recipes/toolchain-linux-x86_64-gcc-11.3/: conanfile.py
core/: CMakeLists.txt
core/include/: configuration.hpp  emulator.hpp  eneaexception.hpp  inputmanager.hpp  resourcemanager.hpp  rom.hpp  romdb.hpp  romsource.hpp  systemcommand.hpp
core/source/: emulator.cpp  inputmanager.cpp  rom.cpp  romdb.cpp  romsource.cpp  systemcommand.cpp
db/: inputdb.json  romdb.json
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
ext/utils/: common.d  os_unix.d
gui/: CMakeLists.txt
gui/include/: externalresourcemanager.hpp  gui.hpp  inputmanager.hpp  internalresourcemanager.hpp  node.hpp  programinfo.hpp  resourcemanager.hpp  rominfo.hpp  rommenu.hpp
gui/include/input/: button.hpp  device.hpp  identification.hpp  manager.hpp  mapping.hpp
gui/source/: gui.cpp  inputmanager.cpp  node.cpp  programinfo.cpp  rominfo.cpp  rommenu.cpp
gui/source/input/: button.cpp  device.cpp  manager.cpp  mapping.cpp
include/: advmame.hpp  cfgfile.hpp  configuration.hpp  database.hpp  emulator.hpp  errorstate.hpp  filesystem.hpp  fontmanager.hpp  generalemulator.hpp  gui.hpp  inputmanager.hpp  langfile.hpp  layer.hpp  list.hpp  logwriter.hpp  mainstate.hpp  menu.hpp  node.hpp  observer.hpp  popup.hpp  rectangle.hpp  removabledisk.hpp  resourcemanager.hpp  result.hpp  rom.hpp  rompart.hpp  romsource.hpp  row.hpp  scene.hpp  signal.hpp  signaler.hpp  soundmanager.hpp  sprite.hpp  state.hpp  text.hpp  texturemanager.hpp  wirelessconnection.hpp  xmldatabase.hpp
lib/: CMakeLists.txt
lib/include/: cache.hpp  configuration.hpp  database.hpp  emulator.hpp  exception.hpp  inputbutton.hpp  inputdevice.hpp  inputmapping.hpp  model.hpp  rom.hpp  romdb.hpp  rominfo.hpp  rommedia.hpp  romsource.hpp  singleton.hpp  softwareinfo.hpp.in  systemcommand.hpp  utils.hpp
lib/include/database/: table.hpp
lib/include/rom/: folder.hpp  game.hpp  info.hpp  media.hpp  source.hpp
lib/include/utils/: lazy.hpp
lib/source/: cache.cpp  configuration.cpp  emulator.cpp  inputbutton.cpp  inputdevice.cpp  inputmapping.cpp  rom.cpp  romdb.cpp  rominfo.cpp  rommedia.cpp  romsource.cpp  systemcommand.cpp
lib/source/rom/: folder.cpp  game.cpp  source.cpp
recipes/advmame/: conanfile.py
recipes/toolchain-linux-aarch64-gcc-11.3/: conanfile.py
recipes/toolchain-linux-armv7hf-gcc-11.3/: conanfile.py
recipes/toolchain-linux-armv7hf-gcc-11.3 copy/: conanfile.py
recipes/toolchain-linux-x86_64-gcc-11.3/: conanfile.py
scripts/: check-linting.sh  common.sh  generate_appimage.sh  generate_changelog.sh  generate_romdb.py  generate_windows_executable.sh  launch_build_container.sh  pack.sh
share/: enea.cfg
share/emulators/AdvMAME/: options.cfg
share/lang/: eng.lang
source/: configuration.cpp  rom.cpp  romsource.cpp
src/: advmame.cpp  cfgfile.cpp  database.cpp  emulator.cpp  errorstate.cpp  filesystem.cpp  fontmanager.cpp  generalemulator.cpp  gui.cpp  inputmanager.cpp  langfile.cpp  layer.cpp  list.cpp  logwriter.cpp  main.cpp  mainstate.cpp  menu.cpp  node.cpp  observer.cpp  popup.cpp  rectangle.cpp  removabledisk.cpp  result.cpp  rom.cpp  rompart.cpp  row.cpp  scene.cpp  signaler.cpp  soundmanager.cpp  sprite.cpp  state.cpp  text.cpp  texturemanager.cpp  wirelessconnection.cpp  xmldatabase.cpp
test/: CMakeLists.txt
test/mock/: cache_mock.hpp  configuration_mock.hpp  database_mock.hpp  emulator_mock.hpp  inputmanager_mock.hpp  node_mock.hpp  resourcemanager_mock.hpp  rom_mock.hpp  romdb_mock.hpp  romsource_mock.hpp  systemcommand_mock.hpp
test/mock/database/: table_mock.hpp
test/mock/utils/: lazy_mock.hpp
test/source/: cache_test.cpp  configuration_test.cpp  database_test.cpp  emulator_test.cpp  inputbutton_test.cpp  inputidentification_test.cpp  inputmanager_test.cpp  inputmapping_test.cpp  main.cpp  model_test.cpp  node_test.cpp  resourcemanager_test.cpp  rom_test.cpp  romdb_test.cpp  romgame_test.cpp  rominfo_test.cpp  rommedia_test.cpp  rommenu_test.cpp  romsource_test.cpp  systemcommand_test.cpp  utils_test.cpp
test/source/database/: table_test.cpp
test/source/utils/: lazy_test.cpp
